--- a/styles/style.css
+++ b/styles/style.css
@@ -71,13 +71,13 @@ nav ul li a{
   opacity: 100%;
 }
 
-a:hover{
+nav ul li a:hover{
   background-color: rgba(160,160,160,0.3);
   transition: all .2s ease-in-out;
   opacity: 100%;
 }
 
-a:active{
+nav ul li a:active{
   background-color:white;
   color: rgb(25,25,25);
 }
