--- a/styles/style.css
+++ b/styles/style.css
@@ -712,15 +712,39 @@ nav ul li a:active{
   background-color: white;
 }
 
-.about-us-photo img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+.about-us-photo,
+.photo-form{
+  display: flex;
+  align-items: center;
+}
+
+.about-us-photo{
+  background: url(../img/sobre-nosotros.jpg) center center no-repeat;
+  background-size: cover;
+  min-height: 230px;
+}
+
+.about-us-photo > div,
+.photo-form > div {
+  background-color: rgba(0,0,0,0.9);
+  color: white;
+}
+
+.about-us-photo > div {
+  padding: 4%;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding-left: 10.5%;
+  font-size: 1.1rem;
+}
+
+#hora-bangkok{
+  font-size: 2rem;
 }
 
 .about-us-description img{
   width: 70%;
-  margin-top:6%;
+  margin-top: 6%;
 }
 
 .about-us-description p{
@@ -794,15 +818,11 @@ nav ul li a:active{
 .photo-form{
   background: url(../img/contacto.jpg) center center no-repeat;
   background-size: cover;
-  display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .photo-form div {
-  background-color: rgba(0,0, 0,0.9);
   border-radius: 4px;
-  color: white;
   padding: 5%;
 }
 
@@ -931,6 +951,10 @@ textarea {
 }
 
 @media (max-width: 780px){
+  .about-us-photo > div {
+    display:none;
+  }
+
   .container-people{
     grid-template-columns: 1fr;
     margin-top: 4%;
