--- a/styles/style.css
+++ b/styles/style.css
@@ -735,7 +735,11 @@ nav ul li a:active{
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   padding-left: 10.5%;
+}
+
+.about-us-photo h2 {
   font-size: 1.1rem;
+  font-weight: 600;
 }
 
 #hora-bangkok{
