--- a/styles/style.css
+++ b/styles/style.css
@@ -458,12 +458,12 @@ nav ul li a:active{
 
   .container-clip-path{
     height:75vh;
+    overflow:hidden;
   }
 
   .container-clip-path > div{
     display:flex;
     padding:0;
-    width:300%;
   }
 
   .container-clip-path img{
@@ -520,9 +520,8 @@ nav ul li a:active{
   }
 
   nav a div p::before {
-    content: "|";
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 1px;
+    margin-right: 7px;
   }
 
   .logo-index div {
@@ -1025,6 +1024,7 @@ nav ul li a:active{
   .banner-recipe > div h1{
     font-weight: 400;
     font-size: 1.8rem;
+    margin-right:0px;
   }
 
   .banner-recipe > div > div{
@@ -1352,7 +1352,7 @@ textarea {
 }
 
 @media (min-width: 780px){
-
+  
   .photo-form > div {
     transition: all .1s ease-in-out;
   }
@@ -1415,7 +1415,7 @@ textarea {
   } 
 }
 
-@media (max-width: 780px){
+@media (max-width: 768px){
 
   .about-us-photo{
     padding:30%;
@@ -1429,15 +1429,12 @@ textarea {
   .container-people{
     padding-top: 2%;
     margin-bottom: 0;
+    grid-column-gap: 3%;
   }
-
+ 
   .container-people > div{
     min-height: 390px;
-    margin-bottom: 4%;
-  }
-
-  .container-people > div:hover{
-    transform: translateY(0px);
+    margin-bottom: 6%;
   }
 
   .container-people > div:nth-child(1),
@@ -1445,13 +1442,10 @@ textarea {
     margin-right: 0;
   }
 
-  .container-people > div > div{
-    visibility: visible;
-  }
-
   .container-form div {
     width: 100%;
     height: 100%;
+    background:white;
   }
 
   .photo-form,
@@ -1474,10 +1468,6 @@ textarea {
 
 @media (max-width: 576px){
 
-  .about-us-photo{
-    height: 300px;
-  }
-
   @keyframes about-us-description-anim{
     from{
       margin-top:0;
@@ -1493,6 +1483,29 @@ textarea {
 
   .container-people{
     grid-template-columns: 1fr;
+    padding-top: 3%;
+  }
+  .container-people img {
+    height:auto;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
+
+  .container-people > div{
+    margin-bottom: 5%;
+  }
+
+  .container-people > div:hover {
+    transform: none;
+  } 
+  
+  .container-people > div > div {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    position: relative;
+    display:block;
   }
 
   .container-about-us,
@@ -1506,14 +1519,6 @@ textarea {
 
   .about-us-description p{
     text-align: left;
-  }
-
-  .container-people{
-    padding-top: 3%;
-  }
-
-  .container-people > div{
-    margin-bottom: 5%;
   }
 }
 
