--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,8 @@ nav a div{
   color: white;
   height: 27px;
   transition: all .1s ease-in;
+  display: flex;
+  align-items: center;
 }
 
 nav a img{
@@ -56,7 +58,7 @@ nav a div p{
 
 nav a div p::before{
   content: "|";
-  margin-left: 8px;
+  margin-left: 9px;
   margin-right: 8px;
 }
 
