--- a/styles/style.css
+++ b/styles/style.css
@@ -232,7 +232,7 @@ nav ul li a:active{
 .logo-index div img{
   width: 450px; 
   margin: 7%;
-  height: auto;
+  height: 76px;
 }
 
 .logo-index div h1 {
