--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
        url('../fonts/open-sans-v20-latin-300.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
+  font-display:swap;
 }
 
 /* open-sans-regular - latin */
@@ -26,6 +27,7 @@
        url('../fonts/open-sans-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+       font-display:swap;
 }
 
 /* open-sans-italic - latin */
@@ -40,6 +42,7 @@
        url('../fonts/open-sans-v20-latin-italic.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-italic.svg#OpenSans') format('svg'); /* Legacy iOS */
+       font-display:swap;
 }
 
 /* open-sans-600 - latin */
@@ -54,6 +57,7 @@
        url('../fonts/open-sans-v20-latin-600.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+       font-display:swap;
 }
 
 /* open-sans-700 - latin */
@@ -68,6 +72,7 @@
        url('../fonts/open-sans-v20-latin-700.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
+       font-display:swap;
 }
 
 /* open-sans-800 - latin */
@@ -82,6 +87,7 @@
        url('../fonts/open-sans-v20-latin-800.woff') format('woff'), /* Modern Browsers */
        url('../fonts/open-sans-v20-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/open-sans-v20-latin-800.svg#OpenSans') format('svg'); /* Legacy iOS */
+       font-display:swap;
 }
 *{
   padding: 0;
