--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'Open sans';
-  src: url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
-  font-display: swap;
+  font-family: 'MyWebFont'; /* Define the custom font name */
+  src:  url('myfont.woff2') format('woff2'),
+        url('myfont.woff') format('woff'); /* Define where the font can be downloaded */
+  font-display: fallback; /* Define how the browser behaves during download */
 }
-
 *{
   padding: 0;
   margin: 0;
