--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: "FontAwesome";
+  font-weight: normal;
+    font-display: swap;
+  font-style: normal;
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-brands-400.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "FontAwesome";
+  font-weight: normal;
+    font-display: swap;
+  font-style: normal;
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-solid-900.woff2") format("woff2");
+}
 
 *{
   padding: 0;
