--- a/styles/style.css
+++ b/styles/style.css
@@ -611,6 +611,7 @@ nav ul li a:active{
   width: 100%;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
+  height:100%;
 }
 
 .card-recipe h4{
