--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,10 @@
 @font-face {
-  font-family: "FontAwesome";
+  font-family: ‘FontAwesome’;
+  src: url(‘fonts/fontawesome-webfont.eot?v=5.10.2’);
+  src: url(‘fonts/fontawesome-webfont.eot?#iefix&v=5.10.2′) format(’embedded-opentype’), url(‘fonts/fontawesome-webfont.woff2?v=5.10.2’) format(‘woff2’), url(‘fonts/fontawesome-webfont.woff?v=5.10.2’) format(‘woff’), url(‘fonts/fontawesome-webfont.ttf?v=5.10.2’) format(‘truetype’), url(‘fonts/fontawesome-webfont.svg?v=5.10.2#fontawesomeregular’) format(‘svg’);
   font-weight: normal;
-    font-display: swap;
   font-style: normal;
-  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-brands-400.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "FontAwesome";
-  font-weight: normal;
-    font-display: swap;
-  font-style: normal;
-  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-solid-900.woff2") format("woff2");
-}
+  }
 
 *{
   padding: 0;
