--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   font-weight: normal;
   font-style : normal;
   src : url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-brands-400.woff2") format("woff2");
+  font-display: wrap;
   }
 *{
   padding: 0;
