--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: "FontAwesome";
-  font-weight: normal;
-  font-style : normal;
-  src : url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/webfonts/fa-brands-400.woff2") format("woff2");
+  src: url("fontawesome-webfont.woff");
   font-display: wrap;
-  }
+
+}
 *{
   padding: 0;
   margin: 0;
