--- a/styles/style.css
+++ b/styles/style.css
@@ -677,7 +677,6 @@ nav a img{
   display: table-cell;
   vertical-align: middle;
   width: 41.5%;
-  object-fit: cover;
 
 }
 
@@ -813,6 +812,14 @@ nav ul li a:active{
   nav ul li a{
     font-size: 1rem;
     opacity: 1;
+  }
+}
+
+@media (max-width: 576px){
+
+  nav a .logo-reduce {
+    display: inline;
+    width: 8.6%;
   }
 }
 
@@ -1133,13 +1140,16 @@ nav ul li a:active{
 
 @media (max-width: 576px){
 
+  nav a .logo{
+    display:none;
+  }
+
   .logo-reduce{
    display:inline;
   }
 
   nav a img {
     height: 25px;
-    width: 24px;
   }
 
   nav a div p{
