--- a/styles/style.css
+++ b/styles/style.css
@@ -1408,6 +1408,7 @@ nav ul li a:active{
 
 .ingredient figure img{
   width: 100%;
+  max-height: 90%;
 }
 
 .ingredient figcaption{
@@ -1785,6 +1786,7 @@ nav ul li a:active{
   padding-top: 4%;
   animation: about-us-description-anim  1s ease-in-out 0s 1;
   filter: invert(100%);
+  height: 24%;
 }
 
 @keyframes about-us-description-anim{
@@ -2151,6 +2153,7 @@ textarea {
 
   .about-us-description img{
     width: 82.5%;
+    height: 14%;
   }
 
   .about-us-description p{
