--- a/styles/style.css
+++ b/styles/style.css
@@ -1219,7 +1219,7 @@ nav ul li a:active{
 }
 
 .card-recipe img{
-  max-height: 60%;
+  height: 60%;
   object-fit: cover;
   width: 100%;
   border-top-right-radius: 4px;
@@ -1358,6 +1358,7 @@ nav ul li a:active{
   width:45px;
   margin-right: 15px;
   margin-bottom: 5px;
+  height:100%;
 }
 
 .spicy img:last-child{
@@ -1406,9 +1407,10 @@ nav ul li a:active{
   width: 33%;
 }
 
-.ingredient figure img{
+.ingredient figure img {
   width: 100%;
-  max-height: 90%;
+  height: 65%;
+  object-fit: cover;
 }
 
 .ingredient figcaption{
@@ -1552,6 +1554,10 @@ nav ul li a:active{
     padding-bottom: 9%;
   }
 
+  .ingredient figure img {
+    height: 75%;
+  }
+  
   .preparation-process{
     padding-bottom: 4%;
   }
