--- a/styles/style.css
+++ b/styles/style.css
@@ -1,72 +1,73 @@
-/* latin */
+/* open-sans-300 - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
-  src:
-  local('Open'),
-  local('OpenSans'),
-  local('Open-sans'),
-  url(https://fonts.gstatic.com/s/opensans/v20/mem5YaGs126MiZpBA-UN_r8OUuhpKKSTjw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('fonts/open-sans-v20-latin-300.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/open-sans-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/open-sans-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/open-sans-v20-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('fonts/open-sans-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/open-sans-v20-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* latin */
+/* open-sans-regular - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src:
-  local('Open'),
-  local('OpenSans'),
-  local('Open-sans'),
-  url(https://fonts.gstatic.com/s/opensans/v20/mem8YaGs126MiZpBA-UFVZ0bf8pkAg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('fonts/open-sans-v20-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/open-sans-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/open-sans-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/open-sans-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('fonts/open-sans-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/open-sans-v20-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* latin */
+/* open-sans-600 - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
-  src:
-  local('Open'),
-  local('OpenSans'),
-  local('Open-sans'),
-  url(https://fonts.gstatic.com/s/opensans/v20/mem5YaGs126MiZpBA-UNirkOUuhpKKSTjw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('fonts/open-sans-v20-latin-600.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/open-sans-v20-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/open-sans-v20-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/open-sans-v20-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('fonts/open-sans-v20-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/open-sans-v20-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* latin */
+/* open-sans-700 - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
-  src:
-  local('Open'),
-  local('OpenSans'),
-  local('Open-sans'),
-  url(https://fonts.gstatic.com/s/opensans/v20/mem5YaGs126MiZpBA-UN7rgOUuhpKKSTjw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('fonts/open-sans-v20-latin-700.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/open-sans-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/open-sans-v20-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/open-sans-v20-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('fonts/open-sans-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/open-sans-v20-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
 
-/* latin */
+/* open-sans-800 - latin */
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 800;
-  font-display: swap;
-  src:
-  local('Open'),
-  local('OpenSans'),
-  local('Open-sans'),
-  url(https://fonts.gstatic.com/s/opensans/v20/mem5YaGs126MiZpBA-UN8rsOUuhpKKSTjw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url('fonts/open-sans-v20-latin-800.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('fonts/open-sans-v20-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/open-sans-v20-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/open-sans-v20-latin-800.woff') format('woff'), /* Modern Browsers */
+       url('fonts/open-sans-v20-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('fonts/open-sans-v20-latin-800.svg#OpenSans') format('svg'); /* Legacy iOS */
 }
+
 
 *{
   padding: 0;
