--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: url('fonts/open-sans-v20-latin-300.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('fonts/open-sans-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -17,6 +18,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: url('fonts/open-sans-v20-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('fonts/open-sans-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -31,6 +33,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
+  font-display: swap;
   src: url('fonts/open-sans-v20-latin-600.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('fonts/open-sans-v20-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -45,6 +48,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: url('fonts/open-sans-v20-latin-700.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('fonts/open-sans-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -59,6 +63,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
   src: url('fonts/open-sans-v20-latin-800.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('fonts/open-sans-v20-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
