--- a/styles/style.css
+++ b/styles/style.css
@@ -1,77 +1,92 @@
-/* open-sans-300 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url('../fonts/open-sans-v20-latin-300.eot'); /* IE9 Compat Modes */
-  src: local(''),
-       url('../fonts/open-sans-v20-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/open-sans-v20-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/open-sans-v20-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/open-sans-v20-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/open-sans-v20-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
+@font-face{
+  font-family:"Open Sans";
+  font-display:swap;
+  src:
+  url(fonts/Light/OpenSans-Light.woff2?v=1.101) format("woff2"),
+  url(fonts/Light/OpenSans-Light.woff?v=1.101) format("woff");
+  font-weight:300;
+  font-style:normal
 }
-
-/* open-sans-regular - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url('../fonts/open-sans-v20-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/open-sans-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/open-sans-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/open-sans-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/open-sans-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/open-sans-v20-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
+@font-face{
+  font-family:"Open Sans";
+  font-display:swap;
+  src:
+  url(fonts/LightItalic/OpenSans-LightItalic.woff2?v=1.101) format("woff2"),
+  url(fonts/LightItalic/OpenSans-LightItalic.woff?v=1.101) format("woff");
+  font-weight:300;font-style:italic
 }
-
-/* open-sans-600 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url('../fonts/open-sans-v20-latin-600.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/open-sans-v20-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/open-sans-v20-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/open-sans-v20-latin-600.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/open-sans-v20-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/open-sans-v20-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
+@font-face{
+  font-family:"Open Sans";
+  font-display:swap;
+  src:
+  url(fonts/Regular/OpenSans-Regular.woff2?v=1.101) format("woff2"),
+  url(fonts/Regular/OpenSans-Regular.woff?v=1.101) format("woff");
+  font-weight:400;
+  font-style:normal
 }
-
-/* open-sans-700 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url('../fonts/open-sans-v20-latin-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/open-sans-v20-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/open-sans-v20-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/open-sans-v20-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/open-sans-v20-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/open-sans-v20-latin-700.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-
-/* open-sans-800 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 800;
-  font-display: swap;
-  src: url('../fonts/open-sans-v20-latin-800.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/open-sans-v20-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/open-sans-v20-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/open-sans-v20-latin-800.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/open-sans-v20-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/open-sans-v20-latin-800.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/Italic/OpenSans-Italic.woff2?v=1.101) format("woff2"),
+    url(fonts/Italic/OpenSans-Italic.woff?v=1.101) format("woff");
+    font-weight:400;font-style:italic
+  }
+  
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/Semibold/OpenSans-Semibold.woff2?v=1.101) format("woff2"),
+    url(fonts/Semibold/OpenSans-Semibold.woff?v=1.101) format("woff");
+    font-weight:600;font-style:normal
+  }
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/SemiboldItalic/OpenSans-SemiboldItalic.woff2?v=1.101) format("woff2"),
+    url(fonts/SemiboldItalic/OpenSans-SemiboldItalic.woff?v=1.101) format("woff");
+    font-weight:600;
+    font-style:italic
+  }
+  
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/Bold/OpenSans-Bold.woff2?v=1.101) format("woff2"),
+    url(fonts/Bold/OpenSans-Bold.woff?v=1.101) format("woff");
+    font-weight:700;
+    font-style:normal
+  }
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/BoldItalic/OpenSans-BoldItalic.woff2?v=1.101) format("woff2"),
+    url(fonts/BoldItalic/OpenSans-BoldItalic.woff?v=1.101) format("woff");
+    font-weight:700;
+    font-style:italic
+  }
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/ExtraBold/OpenSans-ExtraBold.woff2?v=1.101) format("woff2"),
+    url(fonts/ExtraBold/OpenSans-ExtraBold.woff?v=1.101) format("woff");
+    font-weight:800;
+    font-style:normal
+  }
+  @font-face{
+    font-family:"Open Sans";
+    font-display:swap;
+    src:
+    url(fonts/ExtraBoldItalic/OpenSans-ExtraBoldItalic.woff2?v=1.101) format("woff2"),
+    url(fonts/ExtraBoldItalic/OpenSans-ExtraBoldItalic.woff?v=1.101) format("woff");
+    font-weight:800;
+    font-style:italic
+  }
 
 
 *{
