--- a/style.css
+++ b/style.css
@@ -1587,11 +1587,10 @@ textarea {
   }
 }
 
-@media
-(max-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
+@media (max-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
 {
   .about-us-photo {
-    background-image: url(../img/sobre-nosotros-780.jpg);
+    background-image: url(img/sobre-nosotros-780.jpg);
   }
 }
 
@@ -1599,7 +1598,7 @@ textarea {
 (max-width: 780px) and (-webkit-min-device-pixel-ratio: 2)
 {
   .about-us-photo {
-    background-image: url(../img/sobre-nosotros-780-x2.jpg);
+    background-image: url(img/sobre-nosotros-780-x2.jpg);
   }
 }
 
@@ -1607,7 +1606,7 @@ textarea {
 (min-width: 780px) and (-webkit-min-device-pixel-ratio: 1)
 {
     .about-us-photo {
-        background-image: url(../img/sobre-nosotros-840.jpg);
+        background-image: url(img/sobre-nosotros-840.jpg);
     }
 }
 
@@ -1615,19 +1614,19 @@ textarea {
 (min-width: 780px) and (-webkit-min-device-pixel-ratio: 2)
 {
     .about-us-photo {
-        background-image: url(../img/sobre-nosotros-840-x2.jpg);
+        background-image: url(img/sobre-nosotros-840-x2.jpg);
     }
 }
 
 .photo-form {
-    background-image: url(../img/contacto-840.jpg);
+    background-image: url(img/contacto-840.jpg);
 }
 
 @media
 (-webkit-min-device-pixel-ratio: 2)
 {
     .photo-form {
-        background-image: url(../img/contacto-840-x2.jpg);
+        background-image: url(img/contacto-840-x2.jpg);
     }
 }
 
