--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ nav a div{
   bottom: 0;
   left: 5%;
   margin: auto;
-  color: white;
   height: 27px;
+  transition: all .1s ease-in;
   display: flex;
   align-items: center;
 }
@@ -104,6 +104,7 @@ nav a div p{
   font-size: 1.1rem;
   display: inline-block;
   vertical-align: middle;
+  color: white;
 }
 
 nav a div p::before{
@@ -125,16 +126,15 @@ nav ul li{
   display: inline-block;
   line-height: 4.1rem;
   margin: 0 8px;
+  font-size: 0.88rem;
+  opacity: 0.5;
 }
 
 nav ul li a{
   color: white;
-  opacity: 0.5;
-  font-size: 0.88rem;
-  padding: 6px 10px;
-  border-radius: 3px;
-  border: 1px solid transparent;
   text-transform: uppercase;
+ transition: all .2s ease-in-out;
+
 }
 
 .activo{
