--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@
 body{
   background-color: black;
 }
-h1, h2, h3, h4, h5, h5, ul, li, a, p{
-  font: 400 15px/1.5 'Open sans', sans-serif;
+h1, h2, h3, h4, h5, h5, ul, li, a, p, figcaption{
+  font: 'Open sans', sans-serif;
 }
 .body-white{
   background-color: white;
