--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ nav ul li a:active{
   height:100vh;
 }
 
-.container-clip-path .box-clip-path{
+.container-clip-path{
   background-color: black;
 }
 
@@ -474,7 +474,6 @@ nav ul li a:active{
     padding: 2% 2% 2% 5%;
     margin: 2% 2% 3% 0%;
     opacity: 0;
-    transition: all .3s ease-in-out;
     background-color: rgba(0,0,0,0.8);
     bottom:0;
     position: absolute;
