--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body{
   background-color: black;
 }
 h1, h2, h3, h4, h5, h5, ul, li, a, p, figcaption{
-  font: 'Open sans', sans-serif;
+  font-family: "Open sans",sans-serif;
 }
 .body-white{
   background-color: white;
