--- a/style.css
+++ b/style.css
@@ -616,10 +616,9 @@ nav ul li a:active{
   border-radius: 4px;
   text-align: center;
   color: white; 
-  background-color: rgb(25, 25, 25);
   padding-bottom: 9%;
   animation: card-recipe-anim 1s ease-in-out 0s 1 forwards;
-
+margin-top:0;
 }
 
 @keyframes card-recipe-anim{
