--- a/style.css
+++ b/style.css
@@ -1180,13 +1180,11 @@ nav ul li a:active{
 
 @keyframes about-us-photo-anim{
   from{
-    padding: 2%;
-    padding-left: 7%;
+    width:0px;
     opacity:0;
   }
   to{
-    padding: 4%;
-    padding-left: 10.5%;
+    width:100%;
     opacity:1;
   }
 }
