--- a/style.css
+++ b/style.css
@@ -1180,11 +1180,13 @@ nav ul li a:active{
 
 @keyframes about-us-photo-anim{
   from{
-    width:0px;
+    padding: 2%;
+    padding-left: 7%;
     opacity:0;
   }
   to{
-    width:225.267px;
+    padding: 4%;
+    padding-left: 10.5%;
     opacity:1;
   }
 }
