--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 h1, h2, h3, h4, h5, h5, ul, li, a, p, figcaption{
   font-family: "Open sans",sans-serif;
 }
-
+a { color: white; }
 .body-white{
   background-color: white;
 }
@@ -132,7 +132,6 @@ nav ul li a{
   padding: 6px 10px;
   border-radius: 3px;
   border: 1px solid transparent;
-  color:white;
 }
 
 .activo{
@@ -1352,7 +1351,6 @@ textarea {
   color: white;
   font-size: 1.15rem;
   padding:12px 22px;
-  transition: .3s ease;
   border-radius: 4px;
   font-weight: 300;
   margin-bottom: 4%;
