--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ nav ul li{
   line-height: 4.1rem;
   margin: 0 8px;
   font-size: 0.88rem;
- 
+  text-transform: uppercase;
+  filter: brightness(0) invert(1);
 
 
 }
@@ -132,6 +133,7 @@ nav ul li a{
   opacity: 0.5;
   padding: 6px 10px;
   border-radius: 3px;
+  color:white;
 }
 
 .activo{
@@ -145,6 +147,7 @@ nav ul li a:hover{
 
 nav ul li a:active{
   background-color:white;
+  color:black;
 }
 
 /* Menú responsive */
