--- a/style.css
+++ b/style.css
@@ -616,18 +616,18 @@ nav ul li a:active{
   border-radius: 4px;
   padding-bottom: 9%;
   animation: card-recipe-anim 1s ease-in-out 0s 1 forwards;
-  margin-top:0;
+  margin-top: 6%;
   background-color: rgb(25, 25, 25);
 
 }
 
 @keyframes card-recipe-anim{
   from{
-    margin-top: 0%;
+    transform: translateY(-30px);
     opacity:0;
   }
   to{
-    margin-top: 6%;
+    transform: translateY(0px);
     opacity:1;
   }
 }
