--- a/style.css
+++ b/style.css
@@ -314,6 +314,8 @@ nav ul li a:active{
   height:100vh;
 }
 
+
+
 .container-clip-path{
   background-color: black;
 }
@@ -327,11 +329,6 @@ nav ul li a:active{
   font-size: 1.2rem;
   font-weight: initial;
   line-height: 4rem;
-}
-
-.map {
-  width: 10px;
-  padding-right: 5px;
 }
 
 .meet-us-index{ 
@@ -462,7 +459,7 @@ nav ul li a:active{
   }
 
   .container-clip-path .box-clip-path picture,
-  .container-clip-path .box-clip-path img{
+  .container-clip-path .box-clip-path img:last-child{
     width: 100vw;  
     height:100%;
     object-fit: cover;
@@ -493,7 +490,11 @@ nav ul li a:active{
     display: inline;
     margin-right: 1%;
   }
-
+  .map {
+    width: 9px;
+    padding-right: 5px;
+    object-fit: cover;
+  }
   .container-clip-path .content-box-clip-path p{
     margin-top: 2%;
     display: inline;
