--- a/style.css
+++ b/style.css
@@ -202,15 +202,15 @@ nav ul li a:active{
     position: fixed;
     width: 100%;
     height: 100vh;
-    top: 66px;
-    left: -100%;
+    transform: translateY(66px);
+    transform: translateX(0vw);
     text-align: center;
     transition: all .5s;
     background-color: rgba(25,25,25,0.95);
   }
 
   nav ul.show{
-    left: 0;
+    transform: translateX(-100vw);
   }
 
   nav ul li{
