--- a/style.css
+++ b/style.css
@@ -203,14 +203,16 @@ nav ul li a:active{
     width: 100%;
     height: 100vh;
     transform: translateY(66px);
-    transform: translateX(0vw);
+    transform: translateX(-100vw);
     text-align: center;
     transition: all .5s;
     background-color: rgba(25,25,25,0.95);
   }
 
   nav ul.show{
-    transform: translateX(-100vw);
+    transform: translateX(0vw);
+    transform: translateY(66px);
+
   }
 
   nav ul li{
