--- a/style.css
+++ b/style.css
@@ -202,16 +202,15 @@ nav ul li a:active{
     position: fixed;
     width: 100%;
     height: 100vh;
-    transform: translateY(66px);
-    transform: translateX(-100vw);
+  transform:translateY(66px);
+  left: -100%;
     text-align: center;
     transition: all .5s;
-    background-color: rgba(25,25,25,0.95);
   }
 
   nav ul.show{
-    transform: translateX(0vw);
-    transform: translateY(66px);
+    left: 0;
+    background-color: rgba(25,25,25,0.95);
 
   }
 
