--- a/style.css
+++ b/style.css
@@ -427,14 +427,17 @@ nav ul li a:active{
 
   .container-clip-path .box-clip-path:nth-child(1) {
     clip-path: polygon(0 0, 33% 0, 33% 100%, 0% 100%);
+    background-color:black;
   }
 
   .container-clip-path .box-clip-path:nth-child(2) {
     clip-path: polygon(33% 0, 67% 0, 67% 100%, 33% 100%);
+    background-color:black;
   }
 
   .container-clip-path .box-clip-path:nth-child(3) {
     clip-path: polygon(67% 0, 100% 0, 100% 100%, 67% 100%);
+    background-color:black;
   }
 
   .container-clip-path .box-clip-path:hover {
