--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ nav ul li a:active{
   } 
 
   .container-clip-path .box-clip-path:hover picture{
-    filter: brightness(80%);  }
+    filter: brightness(75%);  }
   
   .container-clip-path .content-box-clip-path{
     padding: 2% 2% 2% 5%;
@@ -1188,7 +1188,9 @@ nav ul li a:active{
 #hora-bangkok{
   font-size: 2rem;
 }
-
+.about-us-description{
+  padding-bottom: 0.5%;
+}
 .about-us-description img {
   width: 71%;
   margin-top: 2%;
@@ -1210,7 +1212,8 @@ nav ul li a:active{
 }
 
 .about-us-description p{
-  margin: 6% 8% 7%;
+  margin: 5% 8% 6%;
+  font-size: 0.9rem;
 }
 
 /* descripción de cada uno de los miembros de la empresa */
@@ -1222,17 +1225,6 @@ nav ul li a:active{
   grid-column-gap: 2%;
   animation: container-people-anim  1s ease-in-out 0s 1;
   background-color: black;
-}
-
-@keyframes container-people-anim {
-  from{
-    transform: translateY(-2%);
-    opacity:0;
-  }
-  to{
-    transform: translateY(0%);
-    opacity:1;
-  }
 }
 
 .container-people > div{
@@ -1388,10 +1380,15 @@ textarea {
   .container-people{
     grid-template-columns: 1fr 1fr;
   }
+  
+  .about-us-description{
+    padding-bottom: 2%;
+  }
 
   .about-us-description p{
     margin: 8.5%;
-    margin-top: 6%;
+    margin-top: 4%;
+    font-size: 0.8rem;
   }
 
   .photo-form svg {
@@ -1461,7 +1458,18 @@ textarea {
     margin-top: 4.5%;
   } 
 }
-
+@media (min-width: 576px){
+@keyframes container-people-anim {
+  from{
+    transform: translateY(-2%);
+    opacity:0;
+  }
+  to{
+    transform: translateY(0%);
+    opacity:1;
+  }
+}
+}
 @media (max-width: 768px){
 
   .about-us-photo{
@@ -1515,22 +1523,12 @@ textarea {
 
 @media (max-width: 576px){
 
-  @keyframes about-us-description-anim{
-    from{
-      margin-top:0;
-      width: 77.5%;
-      opacity:0;
-    }
-    to{
-      width: 82.5%;
-      margin-top: 2%;
-      opacity:1;
-    }
-  }
+ 
 
   .container-people{
     grid-template-columns: 1fr;
-    padding-top: 3%;
+    margin-top: 5%;
+    padding-top: 0;
   }
   .container-people img {
     height:70%;
@@ -1542,7 +1540,7 @@ textarea {
   }
 
   .container-people > div{
-    margin-bottom: 5%;
+    background-color: #161616;
   }
 
   .container-people > div:hover {
