--- a/style.css
+++ b/style.css
@@ -1527,7 +1527,7 @@ textarea {
 
   .container-people{
     grid-template-columns: 1fr;
-    margin-top: 5%;
+    margin-top: 6%;
     padding-top: 0;
   }
   .container-people img {
@@ -1565,7 +1565,7 @@ textarea {
   }
 
   .about-us-description p{
-    text-align: left;
+    margin-bottom:0.5%;
   }
 }
 
