--- a/style.css
+++ b/style.css
@@ -697,11 +697,14 @@ nav ul li a:active{
 /* main detalles de una receta*/
 
 /*banner*/
+.banner-recipe picture{
+ 
+  height: calc(44vh + 66px);
+}
 .banner-recipe{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(44vh + 66px);
   animation: banner-recipe-anim 1s ease-in-out 0s 1;
 }
 
