--- a/style.css
+++ b/style.css
@@ -1223,7 +1223,8 @@ nav ul li a:active{
   height: 100%;
   border-radius: 4px;
 }
-.container-people > div{
+.container-people > div:nth-child(1),
+  .container-people > div:nth-child(3){
     margin-right: 1.5%;
   }
 
