--- a/style.css
+++ b/style.css
@@ -1144,7 +1144,9 @@ nav ul li a:active{
   background-color: rgba(0,0,0,0.9);
   color: white;
 }
-
+.about-us-description, .about-us-photo, .form-fields, .photo-form {
+  min-width: 50vw;
+}
 .about-us-photo > div {
   padding: 4%;
   border-top-right-radius: 4px;
