--- a/styles/sobre-nosotros.css
+++ b/styles/sobre-nosotros.css
@@ -212,9 +212,16 @@ nav ul li a:active{
 }
 
 @media (max-width: 576px){
-
+  nav a .logo {
+    display: none;
+}
   nav a .logo-reduce {
     display: inline;
+  }
+
+  nav a img {
+    height: 25px;
+    width: 8%;
   }
 }
 
