--- a/index.css
+++ b/index.css
@@ -128,6 +128,7 @@ nav ul li{
   line-height: 4.1rem;
   margin: 0 8px;
   font-size: 0.88rem;
+  text-transform: uppercase;
 
 
 }
@@ -296,6 +297,7 @@ nav ul li a:active{
   font-weight: 300;
   font-size: 1.2rem;
   padding: 9px 11px;
+  text-transform: uppercase;
   border-radius: 4px;
   margin-top: 8%;
   margin-bottom: 3%;
@@ -345,6 +347,7 @@ nav ul li a:active{
 .meet-us-index a{
   color: white;
   padding: 16px;
+  text-transform: uppercase;
   border-radius: 4px;
   position: absolute;
   background-color: rgba(0,0,0,1);
